[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commodity-mcp"
version = "1.0.0"
description = "MCP server for commodity prices (Gold, BTC, Oil, Palm Oil, Sugar, Rubber, Coal)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "yfinance>=1.0.0",
]

[project.scripts]
commodity-mcp = "commodity_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["commodity_mcp"]
